--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   },
   "homepage": "https://github.com/suzuki-yud/typescript-for-javascript-developers#readme",
   "devDependencies": {
-    "ts-node": "^8.6.2",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "ts-node": "^10.3.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^3.7.5"
   }
 }
